# RNG

./: .gitignore  ARCHIVE2.md  Botcoin_DIFFERENTIAL_REVIEW_2026-01-31.md  CHANGES.md  CMakeLists.txt  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  install.ps1  install.sh  skill.md
.git-rewrite/: backup-refs  commit  index  message  parse
.github/: Dockerfile.arm64
.github/workflows/: ghcr.yml  release.yml
ci/test/: 03_test_script.sh
cmake/: randomx.cmake
cmake/module/: Maintenance.cmake
contrib/devtools/: gen-manpages.py
contrib/testgen/: gen_key_io_test_vectors.py
doc/: productivity.md
docs/: upgrade-from-botcoin.md
scripts/: build-release.sh
specs/: INDEX.md  activation.md  addresses.md  agent-ecosystem.md  agent-integration.md  blocks.md  branding.md  consensus.md  genesis.md  network.md  randomx.md  swaps.md  testnets.md  transactions.md
src/: CMakeLists.txt  addrdb.cpp  addrman.cpp  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind.cpp  clientversion.cpp  clientversion.h  headerssync.cpp  init.cpp  mine_genesis.cpp  net.cpp  netbase.cpp  pow.cpp  pow.h  random.cpp  randomenv.cpp  validation.cpp  validation.h
src/bench/: CMakeLists.txt
src/common/: netif.cpp  run_command.cpp  settings.cpp  system.cpp  system.h
src/consensus/: amount.h
src/crypto/: CMakeLists.txt  randomx_hash.cpp  randomx_hash.h
src/init/: bitcoin-gui.cpp  bitcoin-node.cpp  bitcoin-qt.cpp  bitcoind.cpp  common.cpp
src/ipc/: CMakeLists.txt
src/kernel/: CMakeLists.txt  chainparams.cpp
src/node/: blockstorage.cpp  interfaces.cpp  internal_miner.cpp  internal_miner.h  kernel_notifications.cpp  protocol_version.h  warnings.cpp
src/policy/: feerate.h  policy.cpp
src/qt/: CMakeLists.txt  README.md  bitcoin.cpp  bitcoin.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  coincontroldialog.cpp  createwalletdialog.cpp  guiutil.cpp  intro.cpp  macos_appnap.mm  modaloverlay.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  qrimagewidget.cpp  receiverequestdialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  signverifymessagedialog.cpp  splashscreen.cpp  utilitydialog.cpp
src/qt/forms/: sendcoinsdialog.ui
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: CMakeLists.txt  optiontests.cpp  test_main.cpp
src/rpc/: blockchain.cpp  external_signer.cpp  mining.cpp  node.cpp  register.h  server.cpp
src/test/: CMakeLists.txt  amount_tests.cpp  blockencodings_tests.cpp  blockmanager_tests.cpp  pow_tests.cpp  randomx_tests.cpp  system_tests.cpp  validation_tests.cpp
src/test/fuzz/: CMakeLists.txt
src/test/fuzz/util/: CMakeLists.txt
src/test/util/: mining.cpp  setup_common.cpp
src/util/: CMakeLists.txt  check.cpp  feefrac.h  fs_helpers.cpp  syserror.cpp  tokenpipe.cpp  trace.h
src/wallet/: CMakeLists.txt  feebumper.cpp  init.cpp  sqlite.cpp  wallet.cpp  wallet.h  walletdb.cpp  wallettool.cpp
src/wallet/rpc/: addresses.cpp  wallet.cpp
src/wallet/test/: CMakeLists.txt  util.h
src/wallet/test/fuzz/: CMakeLists.txt
src/zmq/: CMakeLists.txt
test/functional/: feature_genesis.py  feature_randomx.py  feature_segwit_taproot_genesis.py  interface_rpc.py  p2p_network_magic.py  rpc_createmultisig.py  rpc_decodescript.py  rpc_deriveaddresses.py  rpc_generate.py  rpc_invalid_address_message.py  wallet_hd.py  wallet_importdescriptors.py  wallet_labels.py  wallet_rng_addresses.py  wallet_signer.py  wallet_taproot.py
test/functional/data/: rpc_decodescript.json  rpc_psbt.json
test/functional/mocks/: signer.py
test/functional/test_framework/: address.py  script_util.py  segwit_addr.py  test_node.py  util.py
